logs/springpython-samples.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/petclinic'...
Listing './lib/python3.5/site-packages/petclinic/cherrypy'...
Compiling './lib/python3.5/site-packages/petclinic/cherrypy/noxml.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (noxml.py, line 75)
Compiling './lib/python3.5/site-packages/petclinic/cherrypy/view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (view.py, line 77)
Compiling './lib/python3.5/site-packages/petclinic/configure.py'...
***   File "./lib/python3.5/site-packages/petclinic/configure.py", line 30
    print "You don't appear to have MySQLdb module."
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/springirc'...
Listing './lib/python3.5/site-packages/springpython_samples-1.3.0rc1.egg-info'...
Listing './lib/python3.5/site-packages/springwiki'...
Compiling './lib/python3.5/site-packages/springwiki/model.py'...
***   File "./lib/python3.5/site-packages/springwiki/model.py", line 487
    print self.history
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/springwiki/view.py'...
***   File "./lib/python3.5/site-packages/springwiki/view.py", line 116
    except AuthenticationException, e:
                                  ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
